feat: release pipeline for iOS

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@ yarn-error.log*
 
 .vite
 /cypress/screenshots/
+
+# fastlane
+/fastlane/Appfile
+/fastlane/report.xml
+/fastlane/Preview.html
+/fastlane/screenshots
+/fastlane/test_output
