--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "net-grade",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,6 +16,7 @@
     "android": "cap open android"
   },
   "dependencies": {
+    "@capacitor-community/sqlite": "^6.0.2",
     "@capacitor/android": "6.1.2",
     "@capacitor/app": "^6.0.1",
     "@capacitor/core": "6.1.2",
@@ -25,22 +26,23 @@
     "@capacitor/status-bar": "6.0.1",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
-    "@ionic/storage": "^4.0.0",
-    "@reduxjs/toolkit": "^2.3.0",
+    "@tanstack/react-query": "^5.74.4",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "date-fns": "^4.1.0",
     "ionicons": "^7.4.0",
+    "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.2",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
-    "redux-persist": "^6.0.0",
+    "reflect-metadata": "^0.2.2",
     "reselect": "^5.1.1",
+    "sql.js": "^1.13.0",
     "swiper": "^11.1.14",
-    "uuid": "^11.0.5"
+    "typeorm": "^0.3.22",
+    "vite-plugin-wasm": "^3.4.1"
   },
   "devDependencies": {
     "@capacitor/cli": "6.1.2",
@@ -54,7 +56,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
-    "cypress": "^13.5.0",
+    "cypress": "^14.3.1",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.1",
@@ -65,7 +67,7 @@
     "terser": "^5.4.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.1",
-    "vite": "~5.2.0",
+    "vite": "^5.2.0",
     "vitest": "^0.34.6"
   }
 }
