--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "android": "cap open android"
   },
   "dependencies": {
-    "@capacitor-community/sqlite": "^6.0.2",
-    "@capacitor/android": "6.1.2",
-    "@capacitor/app": "^6.0.1",
-    "@capacitor/core": "6.1.2",
-    "@capacitor/haptics": "6.0.1",
-    "@capacitor/ios": "6.1.2",
-    "@capacitor/keyboard": "6.0.2",
-    "@capacitor/status-bar": "6.0.1",
+    "@capacitor-community/sqlite": "^7.0.0",
+    "@capacitor/android": "^7.2.0",
+    "@capacitor/app": "^7.0.1",
+    "@capacitor/core": "^7.2.0",
+    "@capacitor/haptics": "^7.0.1",
+    "@capacitor/ios": "^7.2.0",
+    "@capacitor/keyboard": "^7.0.1",
+    "@capacitor/status-bar": "^7.0.1",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
     "@tanstack/react-query": "^5.74.4",
@@ -45,7 +45,7 @@
     "vite-plugin-wasm": "^3.4.1"
   },
   "devDependencies": {
-    "@capacitor/cli": "6.1.2",
+    "@capacitor/cli": "^7.0.0",
     "@eslint/compat": "^1.2.0",
     "@eslint/js": "^9.12.0",
     "@testing-library/dom": ">=7.21.4",
