--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,14 @@ jobs:
 
     steps:
       - name: Check out repository
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+          cache: 'npm'
+      - name: Install Cypress
+        run: npm install cypress@13.15.0
       - name: Install Dependencies
         run: npm install
 
