--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/android": "^7.2.0",
     "@capacitor/app": "^7.0.1",
     "@capacitor/core": "^7.2.0",
+    "@capacitor/device": "^7.0.1",
     "@capacitor/haptics": "^7.0.1",
     "@capacitor/ios": "^7.2.0",
     "@capacitor/keyboard": "^7.0.1",
@@ -45,7 +46,7 @@
     "vite-plugin-wasm": "^3.4.1"
   },
   "devDependencies": {
-    "@capacitor/cli": "^7.0.0",
+    "@capacitor/cli": "^7.2.0",
     "@eslint/compat": "^1.2.0",
     "@eslint/js": "^9.12.0",
     "@testing-library/dom": ">=7.21.4",
