--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@capacitor/haptics": "^7.0.1",
     "@capacitor/ios": "^7.2.0",
     "@capacitor/keyboard": "^7.0.1",
+    "@capacitor/preferences": "^7.0.1",
     "@capacitor/status-bar": "^7.0.1",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
