- Add @capacitor/filesystem for file operations - Add @capacitor/share for native sharing

--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@capacitor/app": "^7.0.1",
     "@capacitor/core": "^7.2.0",
     "@capacitor/device": "^7.0.1",
+    "@capacitor/filesystem": "^7.0.1",
     "@capacitor/haptics": "^7.0.1",
     "@capacitor/ios": "^7.2.0",
     "@capacitor/keyboard": "^7.0.1",
     "@capacitor/preferences": "^7.0.1",
+    "@capacitor/share": "^7.0.1",
     "@capacitor/status-bar": "^7.0.1",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
@@ -67,6 +69,7 @@
     "jsdom": "^22.1.0",
     "prettier": "^3.3.3",
     "terser": "^5.4.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.1",
     "vite": "^5.2.0",
