--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/app": "^7.0.1",
     "@capacitor/core": "^7.2.0",
     "@capacitor/device": "^7.0.1",
+    "@capacitor/filesystem": "^7.0.1",
     "@capacitor/haptics": "^7.0.1",
     "@capacitor/ios": "^7.2.0",
     "@capacitor/keyboard": "^7.0.1",
