--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/app": "^7.0.1",
     "@capacitor/core": "^7.2.0",
     "@capacitor/device": "^7.0.1",
+    "@capacitor/filesystem": "^7.0.1",
     "@capacitor/haptics": "^7.0.1",
     "@capacitor/ios": "^7.2.0",
     "@capacitor/keyboard": "^7.0.1",
@@ -44,7 +45,8 @@
     "sql.js": "^1.13.0",
     "swiper": "^11.1.14",
     "typeorm": "^0.3.22",
-    "vite-plugin-wasm": "^3.4.1"
+    "vite-plugin-wasm": "^3.4.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@capacitor/cli": "^7.2.0",
