--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@capacitor/status-bar": "^7.0.1",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
+    "@tanstack/react-form": "^1.12.0",
     "@tanstack/react-query": "^5.74.4",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
