--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@capacitor/keyboard": "^7.0.1",
     "@capacitor/preferences": "^7.0.1",
     "@capacitor/status-bar": "^7.0.1",
-    "@ionic/react": "^8.0.0",
+    "@ionic/core": "^8.5.7",
+    "@ionic/react": "^8.5.7",
     "@ionic/react-router": "^8.0.0",
     "@tanstack/react-form": "^1.12.0",
     "@tanstack/react-query": "^5.74.4",
