feat: Redesign EditExamPage with improved UX and modular components (#47)
- Extract ExamDetailsForm and GradeForm into separate components
- Add CSS modules for better styling isolation (EditExamPage.module.css, FormCommon.module.css, GradeForm.module.css)
- Implement new grade confirmation modal with enhanced visual design
- Add grade color visualization based on score
- Improve form validation with inline feedback
- Add loading and error states with skeleton screens
- Add smooth animations and transitions for better user experience
- Update form inputs with better visual hierarchy and spacing
- Add visual feedback for grade ranges with color-coded indicators

--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "@capacitor/keyboard": "^7.0.1",
     "@capacitor/preferences": "^7.0.1",
     "@capacitor/status-bar": "^7.0.1",
-    "@ionic/react": "^8.0.0",
+    "@ionic/core": "^8.5.7",
+    "@ionic/react": "^8.5.7",
     "@ionic/react-router": "^8.0.0",
-    "@tanstack/react-form": "^1.12.0",
+    "@tanstack/react-form": "^1.12.1",
     "@tanstack/react-query": "^5.74.4",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
