--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "android": "cap open android"
   },
   "dependencies": {
+    "@awesome-cordova-plugins/social-sharing": "^8.0.0",
     "@capacitor-community/sqlite": "^7.0.0",
     "@capacitor/android": "^7.2.0",
     "@capacitor/app": "^7.0.1",
@@ -26,7 +27,9 @@
     "@capacitor/ios": "^7.2.0",
     "@capacitor/keyboard": "^7.0.1",
     "@capacitor/preferences": "^7.0.1",
+    "@capacitor/share": "^7.0.1",
     "@capacitor/status-bar": "^7.0.1",
+    "@ionic-native/social-sharing": "^5.36.0",
     "@ionic/core": "^8.5.7",
     "@ionic/react": "^8.5.7",
     "@ionic/react-router": "^8.0.0",
@@ -34,6 +37,7 @@
     "@tanstack/react-query": "^5.74.4",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "cordova-plugin-x-socialsharing": "^6.0.4",
     "date-fns": "^4.1.0",
     "ionicons": "^7.4.0",
     "localforage": "^1.10.0",
