--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@awesome-cordova-plugins/social-sharing": "^8.0.0",
     "@capacitor-community/sqlite": "^7.0.0",
-    "@capacitor/android": "^7.2.0",
+    "@capacitor/android": "^7.3.0",
     "@capacitor/app": "^7.0.1",
     "@capacitor/core": "^7.2.0",
     "@capacitor/device": "^7.0.1",
@@ -39,6 +39,7 @@
     "@types/react-router-dom": "^5.3.3",
     "cordova-plugin-x-socialsharing": "^6.0.4",
     "date-fns": "^4.1.0",
+    "esbuild": "^0.25.6",
     "ionicons": "^7.4.0",
     "localforage": "^1.10.0",
     "react": "^18.2.0",
@@ -46,6 +47,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "react-transition-group": "^4.4.5",
     "reflect-metadata": "^0.2.2",
     "reselect": "^5.1.1",
     "sql.js": "^1.13.0",
@@ -64,6 +66,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-transition-group": "^4.4.12",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
     "cypress": "^14.3.1",
