--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@capacitor/haptics": "^7.0.1",
     "@capacitor/ios": "^7.2.0",
     "@capacitor/keyboard": "^7.0.1",
+    "@capacitor/local-notifications": "^7.0.2",
     "@capacitor/preferences": "^7.0.1",
     "@capacitor/share": "^7.0.1",
     "@capacitor/status-bar": "^7.0.1",
