--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "ios": "cap open ios",
-    "android": "cap open android"
+    "android": "cap open android",
+    "prepare": "husky"
   },
   "dependencies": {
     "@awesome-cordova-plugins/social-sharing": "^8.0.0",
@@ -56,6 +57,8 @@
   },
   "devDependencies": {
     "@capacitor/cli": "^7.2.0",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/compat": "^1.2.0",
     "@eslint/js": "^9.12.0",
     "@testing-library/dom": ">=7.21.4",
@@ -72,6 +75,7 @@
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.11.0",
+    "husky": "^9.1.7",
     "jsdom": "^22.1.0",
     "prettier": "^3.3.3",
     "terser": "^5.4.0",
