--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -1,13 +1,20 @@
 name: Lint Commit Messages
-on: [pull_request]
+
+on:
+  pull_request_target:
+    types: [opened, edited, reopened, ready_for_review]
 
 permissions:
-  contents: read
   pull-requests: read
 
 jobs:
-  commitlint:
+  validate:
+    name: Validate PR title
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: wagoid/commitlint-github-action@v6
+      - uses: amannn/action-semantic-pull-request@v6
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          validateSingleCommit: true
+          validateSingleCommitMatchesPrTitle: true
