--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "recharts": "^3.1.2",
     "reflect-metadata": "^0.2.2",
     "reselect": "^5.1.1",
     "sql.js": "^1.13.0",
