--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-router-dom": "^5.3.3",
     "cordova-plugin-x-socialsharing": "^6.0.4",
     "date-fns": "^4.1.0",
+    "es6-promise-plugin": "^4.2.2",
     "ionicons": "^8.0.13",
     "localforage": "^1.10.0",
     "react": "^18.2.0",
