--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
       DEVELOPER_DIR: /Applications/Xcode.app/Contents/Developer
 
     steps:
-      - name: Select Xcode 16
+      - name: Select Xcode default
         run: sudo xcode-select -s /Applications/Xcode.app
 
       - name: Confirm Xcode Version
