--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ionic/react-router": "^8.7.3",
     "@tanstack/react-form": "^1.12.1",
     "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "cordova-plugin-x-socialsharing": "^6.0.4",
