--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "swiper": "^12.0.1",
     "typeorm": "^0.3.22",
     "vite-plugin-wasm": "^3.4.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@capacitor/cli": "^7.4.4",
