--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "jsx": "react-jsx"
   },
   "include": ["src"],
+  "exclude": ["src/**/*.test.*", "src/tests/**", "**/*.test.*"],
   "references": [
     {
       "path": "./tsconfig.node.json"
