--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "sql.js": "^1.13.0",
     "swiper": "^12.0.3",
     "typeorm": "^0.3.22",
-    "vite-plugin-wasm": "^3.5.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@capacitor/cli": "^7.4.4",
@@ -66,6 +66,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-legacy": "^7.2.1",
@@ -83,6 +84,7 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.2",
+    "vite-plugin-wasm": "^3.5.0",
     "vitest": "^4.0.8"
   }
 }
