refactor: refactor all input fields for AddExamPage.tsx and use zod validation

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tanstack/react-form": "^1.23.8",
     "@tanstack/react-query": "^5.90.8",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "@tanstack/zod-form-adapter": "^0.42.1",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "cordova-plugin-x-socialsharing": "^6.0.4",
@@ -45,9 +46,9 @@
     "es6-promise-plugin": "^4.2.2",
     "ionicons": "^8.0.13",
     "localforage": "^1.10.0",
-    "react": "^19.1.1",
+    "react": "^18.3.1",
     "react-calendar": "^6.0.0",
-    "react-dom": "^19.2.0",
+    "react-dom": "^18.3.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "reflect-metadata": "^0.2.2",
@@ -56,35 +57,35 @@
     "swiper": "^12.0.3",
     "typeorm": "^0.3.22",
     "xlsx": "^0.18.5",
-    "zod": "^4.2.1"
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@capacitor/cli": "^7.4.4",
     "@eslint/compat": "^2.0.0",
     "@eslint/js": "^9.39.1",
-    "@testing-library/dom": ">=10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.4.3",
     "@types/node": "^24.10.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.2",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-react": "^5.1.1",
-    "@vitest/coverage-v8": "^4.0.8",
+    "@vitest/coverage-v8": "^1.6.0",
     "cypress": "^15.6.0",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^15.11.0",
-    "jsdom": "^27.2.0",
+    "jsdom": "^24.1.3",
     "prettier": "^3.3.3",
     "terser": "^5.44.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.2",
     "vite-plugin-wasm": "^3.5.0",
-    "vitest": "^4.0.8"
+    "vitest": "^1.6.0"
   }
 }
