--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.53.1",
     "vite": "^7.3.1",
+    "vite-plugin-wasm": "^3.5.0",
     "vitest": "^4.0.16"
   }
 }
