--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "es6-promise-plugin": "^4.2.2",
     "ionicons": "^8.0.13",
     "localforage": "^1.10.0",
-    "react": "^19.1.1",
+    "react": "^19.2.3",
     "react-calendar": "^6.0.0",
     "react-dom": "^19.2.3",
     "react-router": "^5.3.4",
@@ -55,14 +55,14 @@
     "sql.js": "^1.13.0",
     "swiper": "^12.0.3",
     "typeorm": "^0.3.22",
-    "vite-plugin-wasm": "^3.5.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@capacitor/cli": "^8.0.1",
     "@eslint/compat": "^2.0.0",
     "@eslint/js": "^9.39.1",
-    "@testing-library/dom": ">=10.4.1",
+    "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^14.4.3",
@@ -83,6 +83,7 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.53.1",
     "vite": "^7.3.1",
+    "vite-plugin-wasm": "^3.5.0",
     "vitest": "^4.0.16"
   }
 }
