--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -1,9 +1,12 @@
 require_relative '../../node_modules/@capacitor/ios/scripts/pods_helpers'
 
-platform :ios, '14.0'
+platform :ios, '15.0'
 use_frameworks!
 
-install! 'cocoapods'
+# workaround to avoid Xcode caching of Pods that requires
+# Product -> Clean Build Folder after new Cordova plugins installed
+# Requires CocoaPods 1.6 or newer
+install! 'cocoapods', :disable_input_output_paths => true
 
 def capacitor_pods
   pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
@@ -28,22 +31,4 @@ end
 
 post_install do |installer|
   assertDeploymentTarget(installer)
-
-  # Set the development team for all targets (FIXME)
-  installer.pods_project.targets.each do |target|
-    target.build_configurations.each do |config|
-      config.build_settings['DEVELOPMENT_TEAM'] = 'SS7TV4273L'
-
-      # Skip code signing for resource bundles
-      if target.name.end_with?('_Privacy') || target.name.include?('SQLCipher')
-        config.build_settings['CODE_SIGNING_ALLOWED'] = 'NO'
-        config.build_settings['CODE_SIGNING_REQUIRED'] = 'NO'
-      else
-        # For all framework and library targets, use automatic code signing
-        config.build_settings['CODE_SIGN_STYLE'] = 'Automatic'
-        # Remove any provisioning profile specifier that might have been set
-        config.build_settings.delete('PROVISIONING_PROFILE_SPECIFIER')
-      end
-    end
-  end
 end
