feat: refactor EditExamForm to accept exam object instead of examId (#424)
* feat: refactor EditExamForm to accept exam object instead of examId

* fix: remove unnecessary dependency installation for Codecov uploader

* chore: update CI configuration to install curl and gpg, and run as root

* fix: replace useHistory with useIonRouter for navigation in MainPage

* fix: remove unnecessary Layout component from exam details form

---------

Co-authored-by: florent-gashi1 <florent.gashi@netcetera.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,10 +34,12 @@ jobs:
       - name: Unit Tests with Coverage
         run: npm run test:coverage
 
-      - name: Install dependencies for Codecov uploader (curl, gpg)
+      - name: Install curl and gpg
         run: |
           apt-get update
           apt-get install -y curl gnupg
+        env:
+          DEBIAN_FRONTEND: noninteractive
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
